src/styles/main.css
/* 
  COPYRIGHT DEVLOOSKIE 2021
  
  YOU MAY USE/REUSE/ALTER THIS CODE
  YOU MAY NOT RESELL THIS CODE

*/

/* BASIC SETUP STUFF I PRACTICALLY DO IN EVERY SINGLE PROJECT */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) transform 0.15s,
    ease width 0.45s, ease height 0.45s, ease opacity 0.2s, ease margin 0.25s;
  -webkit-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) transform 0.15s,
    ease width 0.45s, ease height 0.45s, ease opacity 0.2s, ease margin 0.25s;
  -moz-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) transform 0.15s,
    ease width 0.45s, ease height 0.45s, ease opacity 0.2s, ease margin 0.25s;
  -ms-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) transform 0.15s,
    ease width 0.45s, ease height 0.45s, ease opacity 0.2s, ease margin 0.25s;
  -o-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) transform 0.15s,
    ease width 0.45s, ease height 0.45s, ease opacity 0.2s, ease margin 0.25s;
}

::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: var(--secondary-background);
}
::-webkit-scrollbar-thumb {
  background: var(--thirdary-background);
  border-radius: 8px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

:root {
  --main-background: #181818;
  --secondary-background: #282828;
  --thirdary-background: #333333;
  --spotify-green: #1db954;
  --extremely-dark-text: #353535;
  --dark-text: #757575;
  --light-text: #9e9e9e;
  --accent: #af3b2c;
}

html {
  scroll-behavior: smooth;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
  background: var(--main-background);
  color: var(--light-text);
  font-family: "Lexend", sans-serif;
  font-weight: normal;
}

.centerThisPlease {
  max-width: 1920px;
  margin: auto;
}

/* NAV */

nav {
  padding-top: 25px;
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
  width: 115px;
  text-align: center;
}

.logo {
  width: 75px;
}

h6 {
  margin-bottom: 150px;
  font-size: 2.81em;
  font-weight: 500;
  color: var(--extremely-dark-text);
  transform: rotate(-90deg);
}

/* MAIN STUFF */

main {
  padding-top: 100px;
  margin-left: 120px;
  width: 80vw;
}

.spaceInBetweenSections {
  margin-top: 5.8em;
}

.headingStarter,
h1 {
  position: relative;
  color: var(--dark-text);
}

h1:before {
  content: "";
  position: absolute;
  opacity: 1;
  z-index: -1;
  top: 70%;
  left: 0.35em;
  right: -0.15em;
  bottom: 4px;
  background: var(--thirdary-background);
  transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) top 0.15s;
  -webkit-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) top 0.15s;
  -moz-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) top 0.15s;
  -ms-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) top 0.15s;
  -o-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955) top 0.15s;
}

h1:hover:before {
  top: 45%;
}

/* Reset color for project containers */
.gridItem h1 {
  color: unset;
}

.headingStarter {
  margin-right: 10px;
  font-size: 2.37em;
  display: inline-block;
  font-weight: bold;
}

h1 {
  margin-bottom: 20px;
  display: inline-block;
  font-size: 2.37em;
  font-weight: normal;
}

a {
  font-weight: 500;
  text-decoration: none;
  text-transform: uppercase;
  color: var(--accent);
  opacity: 0.6;
}
a:hover {
  opacity: 1;
}

/* PROJECTS CONTAINER AND STUFF */

.gridItem {
  position: relative;
  display: inline-block;
  background: var(--secondary-background);
  width: 380px;
  min-height: 187px;
  vertical-align: top;
  margin: 8px 20px 15px 0px;
  padding: 11px 11px 42px 11px;
  border-radius: 11px;
  -webkit-border-radius: 11px;
  -moz-border-radius: 11px;
  -ms-border-radius: 11px;
  -o-border-radius: 11px;
  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.25);
}

.gridItem:hover {
  transform: translateY(-3px);
  -webkit-transform: translateY(-3px);
  -moz-transform: translateY(-3px);
  -ms-transform: translateY(-3px);
  -o-transform: translateY(-3px);
}

.gridHeader {
  text-transform: uppercase;
  font-weight: 500;
  margin-bottom: 8px;
  font-size: 1.5rem;
}
.gridParagraph {
  color: var(--dark-text);
  font-size: 1.2rem;
}
.gridLink {
  position: absolute;
  bottom: 11px;
  right: 11px;
}

p {
  font-size: 1.4em;
  max-width: 750px;
  padding-right: 30px;
}

/* DESIGN GRID */

.designGridItem:nth-of-type(odd) {
  margin-left: 0;
}

.designGridItem {
  display: inline-block;
  position: relative;
  width: 400px;
  height: 225px;
  margin: 8px 20px 15px 20px;
  background: var(--secondary-background);
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
  border-radius: 8px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

.designGridItem:first-child {
  margin-top: 10px;
}

.noOpacity {
  opacity: 1;
}
.designGridAnchor:hover > .designGridImage {
  margin: 5px 0 0 5px;
}

.designGridImage {
  position: absolute;
  width: 400px;
  height: auto;
  margin: 10px 0 0 10px;
  will-change: margin;
  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
  border-radius: 8px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

/* CONTACT */
.socialMedia {
  display: block;
  margin: 10px 0;
}

.socialStart {
  font-size: 1.5em;
  margin-right: 12px;
  font-weight: 600;
  color: var(--extremely-dark-text);
  opacity: 0.8;
}

h2 {
  display: inline-block;
  font-weight: 400;
  font-size: 1.8em;
}

/* SPOTIFY TILES */

.tippy-tooltip {
  background: var(--secondary-background);
  transition: ease all 0.45s;
  -webkit-transition: ease all 0.45s;
  -moz-transition: ease all 0.45s;
  -ms-transition: ease all 0.45s;
  -o-transition: ease all 0.45s;
}

.spotify {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: flex;
  align-items: center;
  height: 105px;
  width: 330px;
  background: var(--secondary-background);
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
  border-radius: 11px;
  -webkit-border-radius: 11px;
  -moz-border-radius: 11px;
  -ms-border-radius: 11px;
  -o-border-radius: 11px;
}

.spotifyAlbumArt {
  margin-left: 7px;
  height: 89px;
  width: 89px;
  border-radius: 7px;
  -webkit-border-radius: 7px;
  -moz-border-radius: 7px;
  -ms-border-radius: 7px;
  -o-border-radius: 7px;
}

.spotifyDetails {
  min-width: 55%;
  margin-left: 15px;
}

.listeningNow,
.spotifySong,
.spotifyArtist {
  padding-right: 13px;
}

.listeningNow {
  display: block;
  color: var(--spotify-green);
  text-transform: uppercase;
  font-size: 13px;
  padding-bottom: 6px;
}

.spotifySong,
.spotifyArtist,
.listeningNow {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.spotifySong {
  display: block;
  margin: 0;
  font-size: 18px;
  font-weight: normal;
  color: var(--light-text);
}

.spotifySong:before {
  background: unset;
}

.spotifyArtist {
  display: block;
  color: var(--dark-text);
}

@media (max-height: 425px) {
  h6 {
    display: none;
  }
}

@media (max-width: 1278px) {
  .spotify {
    position: relative;
    right: 0;
    bottom: 45px;
  }
}

@media (max-width: 1075px) {
  .designGridItem {
    display: block;
    margin: 30px 0;
  }
  .designGridItem:nth-of-type(3n) {
    margin-top: -20px;
  }
}

@media (max-width: 650px) {
  nav {
    position: relative;
    height: 100px;
    width: 100%;
    align-items: unset;
  }

  .logo {
    margin-left: 25px;
  }

  h6 {
    display: none;
  }

  .spotify {
    width: 98%;
    max-width: 330px;
    margin: 0 auto;
    text-align: left;
  }

  main {
    margin: 0 auto;
    text-align: center;
  }

  p {
    padding: 0 5px;
  }

  .gridItem {
    text-align: left;
    width: 98%;
    max-width: 380px;
    margin: 20px 0;
  }

  .gridParagraph {
    padding: 0;
  }

  .designGridAnchor:hover > .designGridImage {
    margin: 0;
  }

  .designGridItem {
    width: 100%;
    height: auto;
    padding: 10px;
    margin: 80px auto;
  }

  .designGridImage {
    position: relative;
    margin: 0;
    width: 100%;
  }
  .designGridAnchor {
    opacity: 0.9;
  }
}

